--- a/spring_db_spike/src/main/resources/application.properties
+++ b/spring_db_spike/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:mariadb://localhost:3306/springboot_mariadb
+spring.datasource.url=jdbc:mariadb://postgres:3306/springboot_mariadb
 spring.datasource.username=root
 spring.datasource.password=mypass
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
